# Estate

./: pyproject.toml
src/: pipeline.py  schemas.py
