[tool.poetry]
name = "real estate sold analysis"
version = "0.1.0"
description = ""
authors = ["Vlad <vlad57714@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pyspark = "^3.5.2"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
